add query params for clips
